<resources>
    <string name="app_name">Scientific Calculator Project-Final Year</string>

    <string name="displayHint">Enter a Value</string>

    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="clearText">C</string>
    <string name="parenthesesOpenText">(</string>
    <string name="parenthesesCloseText">)</string>
    <string name="divideText">÷</string>
    <string name="multiplyText">×</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="decimalText">.</string>
    <string name="commaText">,</string>
    <string name="equalsText">=</string>
    <string name="percentage">%</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="fibonacciNumberText">fib(n)</string>
    <string name="unitAngleText">rad→deg</string>
    <string name="factorialText" >x!</string>>
    <string name="meanText">mean/avg</string>
    <string name="logarithmFunctionText">log(a,b)</string>

    <string name="backspace"> </string>

    <string name="errorStatus">NaN</string>
    <string name="equalTo">=</string>
    <string name="labelText">Standard Calculator</string>
    <string name="orientationHint">ROTATE → SCIENTIFIC CALCULATOR</string>

</resources>